5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4191/executions/1582_1332.log
== TEST (2019-03-18 21:27:24) 
-- CODE:
aresta = 5
area = 3\2*3a

print(round(3\2*3a, 4))
-- ERROR:
File "XXXX", line 2
    area = 3\2*3a
                ^
SyntaxError: unexpected character after line continuation character
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 21:27:26) 
-- CODE:
aresta = 5
area = 3\2*3a

print(round(3\2*3a, 4))
-- EXECUTION TIME:
0.135363
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 2
    area = 3\2*3a
                ^
SyntaxError: unexpected character after line continuation character

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 15:53:22) 
-- CODE:
aresta =5
area = 3/2*((3)**0.5)*aresta**2

print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 15:53:23) 
-- CODE:
aresta =5
area = 3/2*((3)**0.5)*aresta**2

print(round(area, 4))
-- EXECUTION TIME:
0.191577
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:03:19) 
-- CODE:
aresta =5
area = 3/2*((3)**0.5)*aresta**2

print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:03:30) 
-- CODE:
aresta =5
area = 3/2*((3)**0.5)*aresta**2

print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:03:33) 
-- CODE:
aresta =5
area = 3/2*((3)**0.5)*aresta**2

print(round(area, 4))
-- EXECUTION TIME:
0.249638
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:04:02) 
-- CODE:
aresta =4
area = 3/2*((3)**0.5)*aresta**2

print(round(area, 4))
-- OUTPUT:
41.5692
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:04:08) 
-- CODE:
aresta =2
area = 3/2*((3)**0.5)*aresta**2

print(round(area, 4))
-- OUTPUT:
10.3923
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:04:12) 
-- CODE:
aresta =3
area = 3/2*((3)**0.5)*aresta**2

print(round(area, 4))
-- OUTPUT:
23.3827
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:04:14) 
-- CODE:
aresta =3
area = 3/2*((3)**0.5)*aresta**2

print(round(area, 4))
-- EXECUTION TIME:
0.170267
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
23.3827
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:04:20) 
-- CODE:
aresta =5
area = 3/2*((3)**0.5)*aresta**2

print(round(area, 4))
-- EXECUTION TIME:
0.151465
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
